--- a/package.json
+++ b/package.json
@@ -13,6 +13,7 @@
     "@react-navigation/stack": "^5.12.6",
     "axios": "^0.21.0",
     "expo": "~39.0.2",
+    "expo-constants": "~9.2.0",
     "expo-linear-gradient": "~8.3.0",
     "expo-notifications": "~0.7.2",
     "expo-splash-screen": "~0.6.2",
