--- a/package.json
+++ b/package.json
@@ -23,6 +23,7 @@
     "react": "16.13.1",
     "react-dom": "16.13.1",
     "react-native": "~0.63.3",
+    "react-native-cookies": "^3.3.0",
     "react-native-gesture-handler": "~1.7.0",
     "react-native-multiple-select": "^0.5.6",
     "react-native-reanimated": "~1.13.0",
