--- a/package.json
+++ b/package.json
@@ -16,6 +16,7 @@
     "expo-constants": "~9.2.0",
     "expo-linear-gradient": "~8.3.0",
     "expo-notifications": "~0.7.2",
+    "expo-push-notification-helper": "^0.4.0",
     "expo-splash-screen": "~0.6.2",
     "expo-status-bar": "~1.0.2",
     "expo-updates": "~0.3.2",
